CodeSnipet to first test post

--- a/_posts/2018-09-27-SP1.md
+++ b/_posts/2018-09-27-SP1.md
@@ -1,7 +1,14 @@
 ---
 layout: post
 title: "SP1"
-categories: [Spotfire, Python]
+categories: [Spotfire]
 ---
 
-This is a test post. 
+This is a test post.
+
+{% highlight python %}
+import os
+
+print("Hello World")
+
+{% endhighlight %}
